# js-sdk

./: .gitignore
rust-sdk/: Cargo.toml  README.md
rust-sdk/src/: client.rs  client_response_error.rs  lib.rs
rust-sdk/src/services/: backup_service.rs  base_service.rs  batch_service.rs  collection_service.rs  cron_service.rs  crud_service.rs  file_service.rs  health_service.rs  log_service.rs  mod.rs  realtime_service.rs  record_service.rs  settings_service.rs
rust-sdk/src/stores/: async_auth_store.rs  base_auth_store.rs  local_auth_store.rs  mod.rs
rust-sdk/src/tools/: cookie.rs  dtos.rs  formdata.rs  jwt.rs  legacy.rs  mod.rs  options.rs  refresh.rs
