[package]
name = "pocketbase-sdk"
version = "0.1.0"
edition = "2021"
description = "PocketBase Rust SDK"
license = "MIT"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
async-trait = "0.1"
futures-util = "0.3"
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lib]
name = "pocketbase_sdk"
path = "src/lib.rs"

[features]
default = []
file-watcher = ["notify"]

[dependencies.notify]
version = "6.1"
optional = true
